[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/LevelComplete.gd" type="Script" id=1]
[ext_resource path="res://src/ui/ScoreCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/NinjaScoreDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/EndScoreCounter.tscn" type="PackedScene" id=4]

[node name="LevelComplete" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 422.0
margin_top = 198.0
margin_right = 601.0
margin_bottom = 401.0

[node name="NinjaScoreDisplay" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 179.0
margin_bottom = 41.0

[node name="ScoreCounter" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 45.0
margin_right = 179.0
margin_bottom = 86.0

[node name="EndScoreCounter" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 90.0
margin_right = 179.0
margin_bottom = 131.0

[node name="NextLevel" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 179.0
margin_bottom = 155.0
text = "Next Level"

[node name="Replay" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 179.0
margin_bottom = 179.0
text = "Replay"

[node name="Quit" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 179.0
margin_bottom = 203.0
text = "Return to Main Menu"
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
